# eneba_task

./: .gitignore  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-14535b67b80fefb1ad23f33a8790276e241c6d725a61d7ec222591c5b1763f54.json  query-2c15d21feb05cfca06379aea862c854e015cf3a5f69aecf772734fc378d960a2.json  query-3f8b8c8bd29927f7f9738f0bfa96d2e423dd84914a3a98b7014ab57af975cc77.json  query-3fa59be163e8726b3b6f30fce42a78c172981215b48ca911323d3af1be5290f9.json  query-4b6f1d15e55acd1a3905462887c18e6974932c957ef6c0699f8cb95f48ee26c0.json  query-7910c99437792fe8d1c7dc62d1dac72b1a8fbf7c3bb1b24b25fb3018c2f23517.json  query-d57abf8bfed0f6f81b433a2009c9ab5894bdfe15c9849becbbe6d504d0f51e5c.json  query-e0513208e033d76828a948aabd46e024cff5bbfe121b212f7a9e1a7a2f0e9d91.json  query-f7e6007f20f553f9abbe13f7e08f5415db7f062296815ab1888f12ff8edbb0ab.json  query-fae0b0e56c4a4e4c8937123b4fbda854145bdfbc1e2cf7b1f13dcfc9b67cfb26.json
backend/migrations/: 20260108225849_create_game_table.down.sql  20260108225849_create_game_table.up.sql
backend/src/: config.rs  db.rs  dtos.rs  lib.rs  main.rs  models.rs  router.rs  server.rs
backend/src/handlers/: games.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: dtos.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientProvider.tsx  CreateGameModal.tsx  Game.tsx  Header.tsx  Home.tsx  PriceChangeModal.tsx
frontend/src/styles/: game.module.css  header.module.css  home.module.css  modal.module.css  (+1 more)
nginx/: default.conf
(+2 files in other folders)
